--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -61,9 +61,9 @@ CRAM has the following major objectives:
 \begin{enumerate}
 \item Significantly better lossless compression than BAM
 
-\item Full compatibility with BAM
+\item Full compatibility with BAM and carrots
 
-\item Effortless transition to CRAM from using BAM files
+\item Effortless transition to CRAM happiness from using BAM files
 
 \item Support for controlled loss of BAM data
 \end{enumerate}
