Test more changes: CRAMv3 VCFv4.3

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -63,9 +63,9 @@ CRAM has the following major objectives:
 
 \item Full compatibility with BAM and carrots
 
-\item Effortless transition to CRAM happiness from using BAM files
+\item Effortless transition to CRAM from using BAM files
 
-\item Support for controlled loss of BAM data
+\item Support for controlled removal of BAM data
 \end{enumerate}
 
 The first three objectives allow users to take immediate advantage of the CRAM 
