clarify wording on block byte lengths

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -440,7 +440,7 @@ structure where the container content is stored in the `blocks' field:
 \textbf{Data type} & \textbf{Name} & \textbf{Value}
 \tabularnewline
 \hline
-int32 & length & the sum of the byte lengths of all blocks in this container; 
+int32 & length & the sum of the lengths of all blocks in this container (headers and data); 
 equal to the total byte length of the container minus this header structure\tabularnewline
 \hline
 itf8 & reference sequence id & reference sequence identifier  or\linebreak{}
