CRAM "container header" vs structure.
The title of that section has been "Container structure" since 2014,
but everywhere in the text we use "Container header".  This makes
things consistent, but with a nod towards the past and for consistency
with the following "Block structure" title.

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -431,7 +431,7 @@ Additional compression methods; header and data checksums;
 improvements for unsorted data.
 \end {itemize}
 
-\section{\textbf{Container structure}}
+\section{\textbf{Container header structure}}
 
 The file definition is followed by one or more containers with the following header 
 structure where the container content is stored in the `blocks' field:
